# my-awesome-claude-code

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/security-scanner/: README.md
agents/: code-analyzer.md  commit-generator.md  docs-analyzer.md  environment-setup.md  project-init-validator.md
archive/: DEPRECATION_NOTICE.md  pyproject.toml.old
archive/cli/: main.py
archive/tests/: conftest.py  test_models.py
commands/: improve.md  smart-commit.md  update-command.md  workflow.md
docs/: agents.md  commands.md  configuration.md  workflows.md
extensions/agents/: alignment-checker.md  change-analyzer.md  environment-setup.md  gitignore-manager.md  project-builder.md  refactoring-specialist.md  scaffold-analyzer.md  tech-lead-pe.md
extensions/commands/: project-init.md  project-validate.md  review.md  update-agent.md  upsert-workflow.md  workflow.md
extensions/workflows/: code-review.yaml  project-init.yaml
tests/: __init__.py  test_installer.py
