[project]
name = "claude-code-extensions"
version = "1.0.0"
description = "Simple manager for Claude Code commands and agents"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer[all]>=0.9.0",
]

[project.scripts]
claude-ext = "main:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.hatch.build]
include = [
    "main.py",
    "extensions/**/*",
]
